[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entitys/Switch.gd" type="Script" id=1]
[ext_resource path="res://off.png" type="Texture" id=2]
[ext_resource path="res://on.png" type="Texture" id=3]
[ext_resource path="res://Sounds/button.wav" type="AudioStream" id=4]


[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16, 16 )

[node name="Switch" type="Area2D"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="SpriteOFF" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="SpriteON" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="." to="." method="_on_Switch_body_entered"]
